--- a/front/my-portfolio/src/app/globals.css
+++ b/front/my-portfolio/src/app/globals.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: linear-gradient(
+    135deg,
+    #f8fafc 0%,
+    #ffffff 50%,
+    #f1f5f9 100%
+  );
+  --foreground: #4a596e;
 }
 
 @theme inline {
@@ -14,8 +19,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: linear-gradient(
+      135deg,
+      #806a6a 0%,
+      #6e4545 50%,
+      #293037 100%
+    );
+    --foreground: #e2e8f0;
   }
 }
 
@@ -23,5 +33,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #ffffff;
 }
